clang/test/BSC/Negative/NullabilityCheck/condition_assignment.cbs
// RUN: %clang_cc1 -nullability-check=all -verify %s

int *foo();

void test1(int *p) {
  if ((p = foo()) == nullptr) {
    *p = 1; // expected-error {{nullable pointer cannot be dereferenced}}
  }
}

void test2(int *p) {
  while ((p = foo()) == nullptr) {
    *p = 1; // expected-error {{nullable pointer cannot be dereferenced}}
  }
}

_Safe int *_Borrow _Nullable readdir(int *_Borrow);

_Safe void test3(int *_Borrow _Nullable dirInfo, int *_Borrow dir) {
  while ((dirInfo = readdir(&_Mut *dir)) == nullptr) {
    *dirInfo = 2; // expected-error {{nullable pointer cannot be dereferenced}}
  }
}
